--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   get_it: ^1.0.3
   http: ^0.12.0
   flutter_facebook_login: ^2.0.1
+  dio: 2.1.16
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
